# Chess

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Chess.sln  GenerateProjects.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  premake5.lua
Chess/: CMakeLists.txt  Chess.vcxproj  Chess.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Main.cpp  cmake_install.cmake
Chess/Assets/Shaders/: Board.frag  Board.vert  Piece.frag  Piece.vert
Chess/src/: Application.cpp  Application.h
Chess/src/Board/: Board.cpp  Board.h  PromotionBoard.cpp  PromotionBoard.h
Chess/src/Board/Pieces/: Piece.cpp  Piece.h  SlidingPieces.cpp  SlidingPieces.h  SpecialPieces.cpp  SpecialPieces.h
Chess/src/Engine/: Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
Chess/src/Engine/Events/: Events.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
bin-int/Debug-windows-x86_64/Chess/: Chess.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/Chess/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/Chess/: Chess.exe.recipe
bin-int/Release-windows-x86_64/Chess/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
